--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
   <title>Frontend Mentor | Project tracking intro component</title>
-  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
 <body onload="hello()">
   <div class="navbar">
     <div class="logo">
-      <img src="images/logo.png" alt="">
+      <img src="logo.png" alt="">
     </div>
 
     <div  class="items" id="items">
