--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 </head>
 
 <body onload="hello()">
+  
+  <div class="grey">
+  </div>
+  
   <div class="navbar">
     <div class="logo">
       <img src="logo.png" alt="">
